--- a/main.html
+++ b/main.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Architectural Information</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            width: 1100px;
+            margin: 0 auto;
+        }
+        .imageContainer {
+            width: 100%;
+            text-align: center;
+        }
+        .imageContainer img {
+            max-width: 100%;
+            height: auto;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 30px;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: center;
+        }
+        td img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="imageContainer">
+        <img src="path_to_your_image.jpg" alt="Architectural Information">
+    </div>
+    <table>
+        <tr>
+            <td width="200"><img src="path_to_image1.jpg" alt="Image 1"></td>
+            <td width="600">Architectural Description 1</td>
+            <td width="200"><img src="path_to_image2.jpg" alt="Image 2"></td>
+        </tr>
+        <tr>
+            <td width="200"><img src="path_to_image3.jpg" alt="Image 3"></td>
+            <td width="600">Architectural Description 2</td>
+            <td width="200"><img src="path_to_image4.jpg" alt="Image 4"></td>
+        </tr>
+    </table>
 </body>
-
 </html>
